<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Boken</string>
    <string name="app_name_logo">Boken Logo</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="account_example">john.doe@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hidden">**********</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="personal_information">Personal Information</string>
    <string name="logout">logout</string>
    <string name="edit">Edit</string>
</resources>
