<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountCreation"
    android:background="@color/white"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="50dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/boken_logo"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name_logo">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/comfortaa"
            android:textSize="48sp"
            android:textColor="#352828">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="left"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="36sp"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/black"
            android:layout_gravity="top"
            android:layout_marginBottom="14dp"
            >
        </TextView>


        <EditText
            android:fontFamily="@font/comfortaa"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/rectangle_black"
            android:id="@+id/register_name"
            android:padding="5dp"
            android:layout_marginBottom="7dp"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            >
        </EditText>

        <EditText
            android:fontFamily="@font/comfortaa"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/rectangle_black"
            android:id="@+id/register_lastname"
            android:padding="5dp"
            android:layout_marginBottom="7dp"
            android:inputType="textPersonName"
            android:hint="@string/lastname"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            >
        </EditText>

        <EditText
            android:fontFamily="@font/comfortaa"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/rectangle_black"
            android:id="@+id/register_phone_number"
            android:padding="5dp"
            android:layout_marginBottom="7dp"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            >
        </EditText>

        <Button
            android:id="@+id/b_login_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/next"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/comfortaa"
            >
        </Button>

    </LinearLayout>
</LinearLayout>

