<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical"
      android:background="@drawable/rolands_varsbergs_bg"
      tools:ignore="UselessParent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:paddingTop="50dp"
          tools:ignore="UseCompoundDrawables">
          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/boken_logo"
              android:layout_marginTop="1dp"
              android:layout_marginEnd="8dp"
              android:contentDescription="@string/app_name_logo">
          </ImageView>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/app_name"
              android:fontFamily="@font/comfortaa"
              android:textSize="48sp"
              android:textColor="#352828">
          </TextView>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:layout_margin="10dp"
          android:gravity="center">

      <Button
          android:id="@+id/button_login"
          android:layout_width="168dp"
          android:layout_height="53dp"
          android:layout_marginEnd="2.5dp"
          android:layout_gravity="bottom"
          android:layout_marginBottom="10dp"
          android:text="@string/log_in"
          android:textColor="#6BA93A"
          android:backgroundTint="@android:color/white"
          tools:ignore="ButtonStyle" />

      <Button
          android:id="@+id/button_register"
          android:layout_width="168dp"
          android:layout_height="53dp"
          android:layout_marginStart="2.5dp"
          android:layout_gravity="bottom"
          android:layout_marginBottom="10dp"
          android:text="@string/register"
          android:textColor="@android:color/white"
          android:backgroundTint="#6BA93A"
          tools:ignore="ButtonStyle" />

      </LinearLayout>
  </LinearLayout>
</LinearLayout>